-- 2024.04.11 - 1.3.2

- fix: Challenge cmd, not in arena problem
- fix: Armor/Helmet problems

-- 2024.04.11 - 1.3.1

- feat: Add support for Windows MetamodSkinChanger support
- feat: Worst scenario filter for queue to prevent duplicates
- fix: Add missing text, if no command found for chat message

-- 2024.04.09 - 1.3.0

- feat: Add challenges (duels)
- feat: Public developer API for round types
- feat: Example dodgeball round type
- fix: Helmet and armor give/remove problems
- fix: Loading delay (now the plugin load instantly)
- optimise: Weapon giving logics
- optimise: Plugin loading mechanism

-- 2024.04.06 - 1.2.1

- feat: Windows support added back
- fix: HardwareID is changing with docker reboot
- fix: Health getter throws null pointer exception
- fix: Arena clantag not changes if player stay alive
- upgrade: Hardware lock algorithm

-- 2024.04.04 - 1.2.0

- upgrade: Arena setup algorithm
- upgrade: Arena models
- upgrade: Warmup weapon allocation

-- 2024.04.04 - 1.1.3

- feat: Order scoreboard by ArenaID
- fix: Warmup fixed maximally with upgrades
- fix: VirusTotal false alarm
- fix: GameRules causing errors
- fix: Block checking for team based rountype if there are none (performance)
- fix: Remove round types from MySQL that not exists on server anymore

-- 2024.04.03 - 1.1.2

- feat: Block manual team changes
- upgrade: Warmup arenas now spawn in solo mode
- fix: RoundType numbers not matching
- fix: Warmup every CS2 warmup problem
- fix: Wrong item spawn problems
- fix: Round preferences not being saved
- optimise: Warmup arena logic
- optimise: Round Terminator logic
- optimise: Arena end logic

-- 2024.04.03 - 1.1.1

- feat: Add support for warmup arenas
- fix: Queue stuck problems
- fix: Crash on map change
- fix: Spawn location removed from the list after being used
- fix: Weapon preference not found error
- fix: Round terminator result
- fix: Arena player assignment logic
- upgrade: Replaced custom database logic with ORM