@@ -11,12 +11,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CounterStrikeSharp.API" Version="1.0.205">
+    <PackageReference Include="CounterStrikeSharp.API" Version="*">
       <PrivateAssets>none</PrivateAssets>
       <ExcludeAssets>runtime</ExcludeAssets>
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Dapper" Version="*" />
     <PackageReference Include="MySqlConnector" Version="*" />
     <Reference Include="K4ArenaSharedApi">
       <HintPath>../src-shared/K4-ArenaSharedApi.dll</HintPath>
