@@ -4,6 +4,7 @@ namespace K4Arenas
 	using CounterStrikeSharp.API.Core;
 	using CounterStrikeSharp.API.Modules.Commands;
 	using CounterStrikeSharp.API.Modules.Commands.Targeting;
+	using CounterStrikeSharp.API.Modules.Entities.Constants;
 	using CounterStrikeSharp.API.Modules.Utils;
 	using K4Arenas.Models;
 
