@@ -2,6 +2,7 @@
 
 - fix: Challenge cmd, not in arena problem
 - fix: Armor/Helmet problems
+- fix: Weapons not given (convar problem)
 
 -- 2024.04.11 - 1.3.1
 
